Small fixes after testing with IceShard apps. * Fix installation destination in CMakeLists.txt * Cast align value to uint32_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(hailstorm
 target_include_directories(hailstorm PUBLIC public)
 
 install(DIRECTORY "${CMAKE_SOURCE_DIR}/public/"
-    DESTINATION "include"
+    DESTINATION "public"
     FILES_MATCHING
     PATTERN "*.hxx"
 )
